--- a/container/package.json
+++ b/container/package.json
@@ -31,6 +31,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
